--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./dist/main.css" />
   <script src="./dist/main.js"></script>
-  <title>Project Name</title>
+  <title>Plant Palace</title>
 </head>
 
 <body>
+  <header></header>
+  <div id="game-container">
+  <canvas id="game-canvas" width="640px" height="416px"></canvas>
+  </div>
 </body>
 
 </html>
