--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
   <div id="game-container">
   <canvas id="game-canvas" width="704px" height="512px"></canvas>
   </div>
+
+
+  <div class="buttons">
+  <a href="https://github.com/darothmedia"><button>Github</button></a>
+  <a href="https://www.linkedin.com/in/adrian-rothschild/"><button>LinkedIn</button></a>
+  </div>
+
+
 </body>
 
 </html>
