--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <header></header>
   <div id="game-container">
   <canvas id="game-canvas" width="704px" height="512px"></canvas>
+  <canvas id="player-canvas" width="704px" height="512px"></canvas>
   </div>
 
 
@@ -21,7 +22,6 @@
   <a href="https://github.com/darothmedia"><button>Github</button></a>
   <a href="https://www.linkedin.com/in/adrian-rothschild/"><button>LinkedIn</button></a>
   </div>
-
 
 </body>
 
