--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
   <header></header>
   <div id="game-container">
+  <canvas id="furniture-canvas" width="750px" height="512px"></canvas>
   <canvas id="game-canvas" width="704px" height="512px"></canvas>
   <canvas id="player-canvas" width="704px" height="512px"></canvas>
+  
     <div class="buttons">
       <a href="https://github.com/darothmedia"><button>Github</button></a>
       <a href="https://www.linkedin.com/in/adrian-rothschild/"><button>LinkedIn</button></a>
