--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="./dist/main.css" />
   <script src="./dist/main.js"></script>
   <title>Plant Palace</title>
+  <link rel="icon" href="./img/assets/favicon/bonsai-short.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="./img/assets/favicon/bonsai-short.png" type="image/x-icon" />
 </head>
 
 <body>
