--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <canvas id="player-canvas" width="704px" height="512px"></canvas>
   
     <div class="buttons">
-      <a href="https://github.com/darothmedia"><button>Github</button></a>
-      <a href="https://www.linkedin.com/in/adrian-rothschild/"><button>LinkedIn</button></a>
+      <a href="https://github.com/darothmedia" target="_blank"><button>Github</button></a>
+      <a href="https://www.linkedin.com/in/adrian-rothschild/" target="_blank"><button>LinkedIn</button></a>
     </div>
   </div>
 
