add image and description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta 
+    name="image" 
+    property="og:image" 
+    content="https://live.staticflickr.com/65535/51775962270_1b07ac31b7_o.png" 
+  />
+  <meta
+    name="description"
+    content="Plant Palace is a maze game where youll need to navigate an apartment cluttered with plants to get...well, anywhere! The game is built in vanilla JavaScript and rendered with Canvas API."
+  />
   <link rel="stylesheet" href="./dist/main.css" />
   <script src="./dist/main.js"></script>
   <title>Plant Palace</title>
